# ai-arena

./: index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: api.ts  providers.ts
src/pages/: ArenaPage.tsx  HistoryPage.tsx  SettingsPage.tsx
src/store/: useStore.ts
